Child routes class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
 <button [routerLink]="['/pipes']" routerLinkActive="active" >Pipes</button>
 <button [routerLink]="['/estructural']" routerLinkActive="active" >Estructural</button>
+<button [routerLink]="['/compra']" routerLinkActive="active" >Compra</button>
 <router-outlet>
     
 </router-outlet>
-<h1>Directivas</h1>
-    <h2>De atributo</h2>
-    <app-atributo></app-atributo>
-    <h2>Estructurales</h2>
-    <app-estructural></app-estructural>
-    <hr>
-    <h2>Pipes</h2>
-    <app-pipes></app-pipes>
-    <h2>Modules</h2>
-    <app-listado></app-listado> 
