--- a/src/app/compra/listado/listado.component.html
+++ b/src/app/compra/listado/listado.component.html
@@ -1,1 +1,3 @@
 <p>listado works!</p>
+<button [routerLink]="['/compra/nueva']" routerLinkActive="active">Nueva</button>
+<router-outlet></router-outlet>
