Finish forms group lesson

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<button [routerLink]="['/pipes']" routerLinkActive="active" >Pipes</button>
-<button [routerLink]="['/estructural']" routerLinkActive="active" >Estructural</button>
-<button [routerLink]="['/compra']" routerLinkActive="active" >Compra</button>
-<button [routerLink]="['/venta']" routerLinkActive="active" >Venta</button>
-<router-outlet>
-    
-</router-outlet>
+<app-header></app-header>
+<router-outlet></router-outlet>
