Complete clase 24 servicios en angular(petición get)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,7 @@
 <button [routerLink]="['/estructural']" routerLinkActive="active" >Estructural</button>
 <button [routerLink]="['/compra']" routerLinkActive="active" >Compra</button>
 <button [routerLink]="['/formularios']" routerLinkActive="active" >Formularios</button>
+<button [routerLink]="['/todos']" routerLinkActive="active" >Todos</button>
 
 <router-outlet>
     
