Clase 25 temrinada, get post, put, delete y patch en servicios

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,4 +1,8 @@
 <ul>
-    <li>Titulo del Todo</li>
-    <li *ngFor="let item of todos">{{item.title}}</li>
+    <!-- <li>Titulo del Todo</li> -->
+    <!-- <li *ngFor="let item of todos">{{item.title}}</li> -->
+</ul>
+<ul>
+    <li>Comentarios</li>
+    <li *ngFor="let itemC of comments">{{itemC.body}}</li>
 </ul>
