--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,3 +1,4 @@
+<button (click)="updatePost()">Update</button>
 <ul>
     <!-- <li>Titulo del Todo</li> -->
     <!-- <li *ngFor="let item of todos">{{item.title}}</li> -->
@@ -6,3 +7,4 @@
     <li>Comentarios</li>
     <li *ngFor="let itemC of comments">{{itemC.body}}</li>
 </ul>
+<app-todo></app-todo>
